# gem_simulator

./: .gitattributes  .gitignore  README.md
gem_description/: CMakeLists.txt
gem_description/config_rviz/: gem_velodyne.rviz  gem_velodyne_stereo.rviz
gem_description/urdf/: gem.gazebo  gem.urdf.xacro
gem_gazebo/: CMakeLists.txt
gem_gazebo/launch/: gem_vehicle.launch  spawn_gem.launch
gem_gazebo/scripts/: gem_control.py  gem_sensor_info.py
gem_gazebo/worlds/: race_track.world
gem_pcl/: CMakeLists.txt
gem_pcl/src/: gem_velodyne.cpp
gem_simulator/gem_description/: CMakeLists.txt  package.xml
gem_simulator/gem_description/config_rviz/: gem_velodyne.rviz
gem_simulator/gem_description/urdf/: gem.gazebo  gem.urdf.xacro  macros.xacro  materials.xacro
gem_simulator/gem_gazebo/: CMakeLists.txt  package.xml
gem_simulator/gem_gazebo/config/: gem_joint_control_params.yaml
gem_simulator/gem_gazebo/launch/: gem_vehicle.launch
gem_simulator/gem_gazebo/scripts/: gem_control.py
gem_simulator/gem_gazebo/worlds/: example.world
gem_simulator/gem_teleop/: CMakeLists.txt
gem_simulator/gem_teleop/src/: teleop_joy.cpp
gem_teleop/: package.xml
gem_teleop/launch/: teleop_joy.launch
gem_teleop/src/: teleop_joy.cpp
gem_vision/: CMakeLists.txt
gem_vision/scripts/: gem_vision.py  poly_fit.py
